--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -29,7 +29,7 @@
             const formdata = new FormData(formEl);
             const data = Object.fromEntries(formdata);
 
-            let response = await fetch('/sell', {
+            let response = await fetch('/sellcheck', {
                 method: 'POST',
                 headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify(data)
