Tue, Apr 23, 2024, 10:04 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -37,7 +37,7 @@
 
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
-
+            console.log(responseObj);
             if (responseObj == null)
                 document.querySelector("#symbolstatus").innerHTML = 'Symbol not found';
             else
