Tue, Apr 23, 2024, 10:12 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -38,7 +38,7 @@
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
             console.log(responseObj);
-            if (responseObj == null)
+            if (responseObj == [])
                 document.querySelector("#symbolstatus").innerHTML = 'Symbol not found';
             else
             {
