Tue, Apr 23, 2024, 10:25 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -38,7 +38,7 @@
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
             console.log(responseObj);
-            if (responseObj == [])
+            if (responseObj === [])
                 sellCheckStatus('Symbol not found');
             else
             {
