Tue, Apr 23, 2024, 10:28 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -37,8 +37,8 @@
 
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
-            console.log(responseObj);
-            if (responseObj === [])
+            console.log(responseObj.length);
+            if (responseObj.length == 0)
                 sellCheckStatus('Symbol not found');
             else
             {
