Tue, Apr 23, 2024, 10:32 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -47,6 +47,7 @@
 
                 if ('price' in responseObj)
                 {
+                    console.log('got here')
                     const currprice = responseObj["price"];
                     const currsymbol = responseObj["symbol"];
 
