Tue, Apr 23, 2024, 10:35 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -37,9 +37,9 @@
 
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
-            console.log(responseObj.length);
-            if (responseObj.length == 0)
-                sellCheckStatus('Symbol not found');
+            console.log(responseObj);
+            if (responseObj == )
+                sellCheckStatus('You do not own these stock');
             else
             {
                 if ('status' in responseObj)
