--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -38,7 +38,7 @@
             let responset = await response.text();
             let responseObj = JSON.parse(responset);
             console.log(responseObj);
-            if (responseObj == )
+            if (responseObj == null)
                 sellCheckStatus('You do not own these stock');
             else
             {
