--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -47,7 +47,7 @@
 
                 if ('price' in responseObj)
                 {
-                    console.log('got here')
+                    sellCheckStatus('');
                     const currprice = responseObj["price"];
                     const currsymbol = responseObj["symbol"];
 
@@ -60,15 +60,15 @@
                                 <tr>
                                     <td> ${currsymbol}</td>
                                     <td> Price per unit :  $ ${currprice}</td>
-                                    <td id="buytotal"></td>
+                                    <td id="selltotal"></td>
                                     <td>
-                                        <form id="buytransaction">
-                                            <input id="buyauto" autocomplete="off" autofocus placeholder="0" name="shares" type="text">
+                                        <form id="selltransaction">
+                                            <input id="sellauto" autocomplete="off" autofocus placeholder="0" name="shares" type="text">
                                             <input type="hidden" name="symbol" value="${currsymbol}">
-                                            <button class="btn btn-primary" type="submit">Buy</button>
+                                            <button class="btn btn-primary" type="submit">Sell</button>
                                         </form>
                                     </td>
-                                    <td id="buystatus"></td>
+                                    <td id="sellstatus"></td>
                                 </tr>
                             </table>`;
 
