Tue, Apr 23, 2024, 11:10 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -105,7 +105,7 @@
                         const data = Object.fromEntries(formdata);
 
                         let totalbalance = await returnBalance();
-                        let result = buyValueCheck(currprice, data["shares"], totalbalance);
+                        let result = sellSharesCheck(currprice, data["shares"], totalbalance);
 
                         if (result == '0') {
 
