Tue, Apr 23, 2024, 11:15 PM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -110,7 +110,7 @@
 
                         if (result == '0') {
 
-                            let response = await fetch('/buy', {
+                            let response = await fetch('/sell', {
                                 method: 'POST',
                                 headers: {'Content-Type':'application/json'},
                                 body: JSON.stringify(data)
