--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -120,17 +120,17 @@
 
                             if (responseObj['status'] == '0') //means ok
                             {
-                                buyStatus("Transaction made");
+                                sellStatus("Transaction made");
                                 updateMainBalance();
                             }
                             else
-                                buyStatus(responseObj['status']);
+                                sellStatus(responseObj['status']);
                         }
                         if (result == '1') {
-                            buyStatus("Insufficient Funds");
+                            sellStatus("Not enough shares to sell");
                         }
                         if (result == '2') {
-                            buyStatus("Input must be strictly numeric");
+                            sellStatus("Input must be strictly numeric");
                         }
                     });
                 }
