Tue, Apr 23, 2024, 11:18 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -68,7 +68,7 @@
 
             html =`
                         <tr>
-                            <td>Total Stock Value = $${totalstockprice}</td>
+                            <td>Total Stock Value = $${totalstockprice.toFixed(2)}</td>
                         </tr>
                         <tr>
                             <td>Balance = $${balance.toFixed(2)}</td>
