Tue, Apr 23, 2024, 11:19 PM +08:00

--- a/finance/templates/index.html
+++ b/finance/templates/index.html
@@ -56,8 +56,8 @@
                         <tr>
                         <td>${symbol}</td>
                         <td>${shares}</td>
-                        <td>$${price}</td>
-                        <td>$${total} </td>
+                        <td>$${price.toFixed(2)}</td>
+                        <td>$${total.toFixed(2)} </td>
                         </tr>
                         `
             }
