Wed, Apr 24, 2024, 11:00 AM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -63,7 +63,7 @@
                                 <col style="width:10%" />
                                 <tr>
                                     <td> ${currsymbol}</td>
-                                    <td> Shares owned : ${shares}</td>
+                                    <td id="sellshares"></td>
                                     <td> Price per unit :  $ ${currprice}</td>
                                     <td id="selltotal"></td>
                                     <td>
