Wed, Apr 24, 2024, 11:23 AM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -79,6 +79,8 @@
 
                     document.querySelector("#result").innerHTML = html;
 
+                    await sell_updateSharesDisplay(currsymbol);
+
 
                     let autoEl = document.querySelector("#sellauto");
                     autoEl.addEventListener('input', async function() {
