Wed, Apr 24, 2024, 11:27 AM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -107,6 +107,7 @@
 
                         const formdata = new FormData(formbEl);
                         const data = Object.fromEntries(formdata);
+                        const currsymb = data['symbol']
 
                         let result = sellSharesCheck(data["shares"], shares);
 
@@ -124,6 +125,7 @@
                             {
                                 sellStatus("Transaction made");
                                 updateMainBalance();
+                                await sell_updateSharesDisplay(datasymb);
                             }
                             else
                                 sellStatus(responseObj['status']);
