Wed, Apr 24, 2024, 11:28 AM +08:00

--- a/finance/templates/sell.html
+++ b/finance/templates/sell.html
@@ -125,7 +125,7 @@
                             {
                                 sellStatus("Transaction made");
                                 updateMainBalance();
-                                await sell_updateSharesDisplay(datasymb);
+                                await sell_updateSharesDisplay(currsymb);
                             }
                             else
                                 sellStatus(responseObj['status']);
