Wed, Apr 24, 2024, 1:33 PM +08:00

--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -24,11 +24,23 @@
             </tr>
         </thead>
 
-        <tbody>
+        <tbody id="historyinsert">
 
         </tbody>
 
 
     </table>
+
+    <script>
+        async function fetchpage(){
+            let reply = await
+
+
+
+
+        }
+
+
+    </script>
 
 {% endblock %}
