Wed, Apr 24, 2024, 1:42 PM +08:00

--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -33,7 +33,16 @@
 
     <script>
         async function fetchpage(){
-            let reply = await
+            let reply = await fetch('/history?q="fetch"');
+            let replytext = await reply.text();
+            let replyObj = await JSON.parse(replytext);
+
+            for (obj of replyObj){
+                
+
+
+
+            }
 
 
 
