Wed, Apr 24, 2024, 1:55 PM +08:00

--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -38,11 +38,14 @@
             let replyObj = await JSON.parse(replytext);
 
             for (obj of replyObj){
-                
-
-
-
-            }
+                currsym = obj['symbol'];
+                currtrans = obj['buycode'];
+                currprice = obj['price'];
+                currshares = obj['shares'];
+                currdate = obj['date'];
+                currtime = obj['time'];
+                update_historypage(currsym, currtrans, currprice, currshares, currdate, currtime)
+        }
 
 
 
