Wed, Apr 24, 2024, 2:14 PM +08:00

--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -33,7 +33,7 @@
 
     <script>
         async function fetchpage(){
-            let reply = await fetch('/history?q="fetch"');
+            let reply = await fetch('/history?q=fetch');
             let replytext = await reply.text();
             let replyObj = await JSON.parse(replytext);
 
