Wed, Apr 24, 2024, 2:20 PM +08:00

--- a/finance/templates/history.html
+++ b/finance/templates/history.html
@@ -37,10 +37,10 @@
             let replytext = await reply.text();
             let replyObj = await JSON.parse(replytext);
 
-            update_historypage(replyObj)
+            update_historypage(replyObj, db)
         }
 
-        await fetchpage();
+        fetchpage();
 
 
 
