--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -61,7 +61,9 @@
         {% endif %}
 
         <main class="container py-5 text-center">
+                { % if session["user_id"] % }
             <script>
+
                      updateMainBalance();
             </script>
             {% block main %}{% endblock %}
