Wed, Apr 24, 2024, 2:42 PM +08:00

--- a/finance/templates/layout.html
+++ b/finance/templates/layout.html
@@ -61,10 +61,11 @@
         {% endif %}
 
         <main class="container py-5 text-center">
-                { % if session["user_id"] % }
+                {% if session["user_id"] %}
             <script>
                      updateMainBalance();
             </script>
+                {% endif %}
             {% block main %}{% endblock %}
         </main>
 
