--- a/MARKUP/syntax.css
+++ b/MARKUP/syntax.css
@@ -17,3 +17,11 @@
 {
     font-size: small;
 }
+
+
+Box model
+https://www.w3schools.com/css/css_boxmodel.asp
+
+Organizing CSS
+BEM
+https://css-tricks.com/bem-101/
